feat: init cart (unfinished)
